@@ -1,3 +1,14 @@
+2004-11-01  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/java/util/Calendar.java:
+	Resynced with GNU Classpath.
+
+	2004-10-31  Noa Resare  <noa@resare.com>
+
+        * java/util/Calendar.java (explicitDSTOffset): New instance field.
+        (set(int,int)): Set and use new field.
+        (set(int,int,int)): Check new field.
+
 2004-10-31  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/javalib/Klasses.jar.bootstrap:
